; ModuleID = '/home/carl/AnghaBench/linux/drivers/base/extr_property.c_device_property_read_u32_array.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/base/extr_property.c_device_property_read_u32_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @device_property_read_u32_array(%struct.device* %0, i8* %1, i32* %2, i64 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.device*, %struct.device** %5, align 8
  %10 = call i32 @dev_fwnode(%struct.device* %9)
  %11 = load i8*, i8** %6, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = call i32 @fwnode_property_read_u32_array(i32 %10, i8* %11, i32* %12, i64 %13)
  ret i32 %14
}

declare dso_local i32 @fwnode_property_read_u32_array(i32, i8*, i32*, i64) #1

declare dso_local i32 @dev_fwnode(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
